# CLI

./: .gitignore  CMakeLists.txt  Parser.cpp  Parser.h  Program.cpp  Program.h  README.md  Reader.cpp  Reader.h  main.cpp
Commands/: Batch.cpp  Batch.h  Command.cpp  Command.h  Date.cpp  Date.h  Echo.cpp  Echo.h  Head.cpp  Head.h  Prompt.cpp  Prompt.h  Rm.cpp  Rm.h  Time.cpp  Time.h  Touch.cpp  Touch.h  Tr.cpp  Tr.h  Truncate.cpp  Truncate.h  Wc.cpp  Wc.h  streamInterfaces.h
